# AI_senior_main_package

./: README.md  depth_processing.py  run_all.sh  run_all_sim.sh
all_grasp_pkg/: package.xml  setup.cfg  setup.py
all_grasp_pkg/all_grasp_pkg/: grasp_client.py  grasp_server.py  main_all_grasp.py  my_gripper_with_contact.py
best_grasp_pkg/: package.xml  setup.cfg  setup.py
best_grasp_pkg/best_grasp_pkg/: best_grasp_server.py  file.py  ik_monte_carlo_counter.py  ik_monte_carlo_counter_collision.py  pose_transform.py  sub_tf.py
colliding_links_checker/: CMakeLists.txt  package.xml
colliding_links_checker/src/: best_grasp_collision_filter.cpp  colliding_links_node.cpp  colliding_links_old.cpp  joint_state_filter_server.cpp  note.cpp  planning_scene_caller.cpp  planning_scene_caller_with_collision.cpp  robot_model_loader_node.cpp  robot_pose_collision_check.cpp  ur_colliding_boxes_pub.cpp  ur_colliding_check.cpp
collision_maker_pkg/: package.xml  setup.cfg  setup.py
collision_maker_pkg/collision_maker_pkg/: collision_client.py  collision_server.py  collision_server_with_mask.py
collision_stl/: CMakeLists.txt  package.xml
collision_stl/scripts/: stl_collision_loader  stl_collision_loader.py
custom_srv_pkg/: CMakeLists.txt  package.xml
custom_srv_pkg/msg/: GraspPose.msg  GraspPoses.msg  InputOutput.msg
custom_srv_pkg/srv/: AimGripPlan.srv  BestGraspPose.srv  CameraIKJointState.srv  GoalGripPlan.srv  GraspPose.srv  GraspPoseSend.srv  Gripper.srv  IKJointState.srv  IKPassCount.srv  IMGSend.srv  JointStateCollision.srv  JointStateCollisionBool.srv  PCLFuse.srv  PCLMani.srv  PESend.srv  PointCloudSend.srv  PointCloudSendWithMask.srv  TCPPose.srv  TargetObjectSend.srv
goal_pub_pkg/: CMakeLists.txt  package.xml  setup.py
goal_pub_pkg/scripts/: send_pose.py  send_pose_rviz.py  send_pose_rviz_feedback.py
goal_pub_pkg/src/: add_collision_object.cpp  echo_pose.cpp  move_robot.cpp  robot_server.cpp  robot_server_node.cpp  trigger_client.cpp  trigger_server.cpp
ism_pkg/: package.xml  setup.cfg  setup.py
ism_pkg/ism_pkg/: client.py  server.py
kinematic_pkg/: package.xml  setup.py
kinematic_pkg/kinematic_pkg/: ik.py  ik_camera_pose.py  ik_camera_pose_pub.py  ik_joint_pub.py  ik_server.py  joint_pos.py
main_pkg/: package.xml  setup.py
main_pkg/_archive/: main_old.py  send_pose.py  socket_client_pe.py
main_pkg/launch/: main.launch.py
main_pkg/main_pkg/: client.py  custom_joint_state_publisher_gui.py  dataset_capture.py  dataset_fusing_capture.py  main.py  reader.py  socket_client.py  socket_client_example.py  socket_client_pe.py  utils.py  zed_sub.py
main_pkg/main_pkg/socket_server_example/: README.md  my_custom_socket.py  pe_server.py  server_example.py  server_test_image.py
main_pkg/main_pkg/utils/: fake_utils.py  image_utils.py  my_custom_socket.py  utils.py
my_zed_pkg/: package.xml  setup.cfg  setup.py
my_zed_pkg/my_zed_pkg/: zed_client_test.py  zed_sub.py
obj_collision/: CMakeLists.txt  package.xml
obj_collision/src/: obj_collision.cpp
pcl_fuse/: CMakeLists.txt  package.xml
pcl_fuse/pcl_fuse/: pcl_fuser  pcl_publisher  pcl_to_depth_min_server  pcl_to_depth_server  pcl_to_rgbd
pcl_manipulation/: CMakeLists.txt  package.xml
pcl_manipulation/pcl_manipulation/: pcl_mani_client  pcl_manipulation  pcl_manipulation_server
pe_pkg/: package.xml  setup.cfg  setup.py
pe_pkg/pe_pkg/: pose_client.py  pose_server.py
pos_endeffector/: package.xml  setup.py
pos_endeffector/pos_endeffector/: joint_pos.py  pos_endeffector_pub.py
sixd_label/: CMakeLists.txt  package.xml
sixd_label/src/: pcl_pub  stl_pub  together  together_forever
