<?xml version="1.0"?>
<package format="3">
  <name>goal_pub_pkg</name>
  <version>0.0.1</version>
  <description>A simple MoveIt demo node</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_visual_tools</depend>
  <depend>geometry_msgs</depend>
  <depend>custom_srv_pkg</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
