<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ism_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="icynunnymumu@todo.todo">icynunnymumu</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3</exec_depend>

  <depend>custom_srv_pkg</depend>
  <depend>sensor_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
