<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obj_collision</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tunyaluck@todo.todo">tunyaluck</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>moveit_core</depend>
  <depend>rviz_visual_tools</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>interactive_markers</depend>
  <depend>moveit_ros_planning</depend>
  <depend>pluginlib</depend>
  <depend>Eigen3</depend>
  <depend>Boost</depend>
  <depend>control_msgs</depend>
  <depend>moveit_servo</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>PCL</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
