<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pos_endeffector</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="85739324+Tunyalucklie@users.noreply.github.com">tunyaluck</maintainer>
  <license>TODO: License declaration</license>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>moveit_msgs</depend>
  <depend>custom_srv_pkg</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>